# crispy-dollop

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  __main__.py  constants.py  db.py
app/api/v1/: __init__.py  books.py  library.py  members.py
app/clients/: __init__.py  frappe.py
app/crud/: __init__.py  base.py  library.py
app/models/: __init__.py  book.py  frappe.py  library.py  member.py  members.py  transaction.py
migrations/: env.py
migrations/versions/: 0a74d48a7776_regen_models.py  753194e8dee0_aaa.py  bdccbc22949d_make_email_unique.py  ec9b141ef5aa_create_book_member_model.py  faeb3928e4ef_aaaaa.py  fbb1a092f94c_more_models.py
templates/: base.html  book_create.html  book_edit.html  books.html  error.html  index.html  library.html  loan_book.html  member_create.html  member_edit.html  members.html  return_book.html  search_books.html
