[project]
name = "lib-mgmt-sys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.3",
    "fastapi[standard]>=0.115.2",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "mypy>=1.12.0",
    "ruff>=0.7.0",
]
